--- a/composer.json
+++ b/composer.json
@@ -1,70 +1,98 @@
 {
-    "name": "b-connect/drupal-project",
-    "description": "Project template for Drupal 8 projects with composer",
-    "type": "project",
-    "license": "GPL-2.0+",
-    "authors": [
-        {
-            "name": "",
-            "role": ""
-        }
-    ],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.drupal.org/8"
-        }
-    ],
-    "require": {
-        "composer/installers": "^1.2",
-        "drupal-composer/drupal-scaffold": "^2.2",
-        "cweagans/composer-patches": "~1.0",
-        "drupal/core": "~8.0",
-        "drush/drush": "~8.0",
-        "drupal/console": "~1.0"
-    },
-    "require-dev": {
-        "behat/mink": "~1.7",
-        "behat/mink-goutte-driver": "~1.2",
-        "jcalderonzumba/gastonjs": "~1.0.2",
-        "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
-        "mikey179/vfsStream": "~1.2",
-        "phpunit/phpunit": "~4.8",
-        "symfony/css-selector": "~2.8"
-    },
-    "conflict": {
-        "drupal/drupal": "*"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "autoload": {
-        "classmap": [
-            "scripts/composer/ScriptHandler.php"
-        ]
-    },
-    "scripts": {
-        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-        "pre-install-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
-        ],
-        "pre-update-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
-        ],
-        "post-install-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
-        ],
-        "post-update-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
-        ]
-    },
-    "extra": {
-        "installer-paths": {
-            "src/core": ["type:drupal-core"],
-            "src/libraries/{$name}": ["type:drupal-library"],
-            "src/modules/contrib/{$name}": ["type:drupal-module"],
-            "src/profiles/contrib/{$name}": ["type:drupal-profile"],
-            "src/themes/contrib/{$name}": ["type:drupal-theme"],
-            "drush/contrib/{$name}": ["type:drupal-drush"]
-        }
+  "name": "b-connect/drupal-project",
+  "description": "Project template for Drupal 8 projects with composer",
+  "type": "project",
+  "license": "GPL-2.0+",
+  "authors": [
+      {
+          "name": "",
+          "role": ""
+      }
+  ],
+  "repositories": [{
+    "type": "composer",
+    "url": "https://packages.drupal.org/8"
+  }, {
+    "type": "drupal-library",
+    "package": {
+      "name": "kenwheeler/slick",
+      "version": "1.6.0",
+      "dist": {
+        "type": "zip",
+        "url": "https://github.com/kenwheeler/slick/archive/1.6.0.zip",
+        "reference": "1.6.0"
+      }
     }
+  }],
+  "require": {
+      "composer/installers": "^1.2",
+      "drupal-composer/drupal-scaffold": "^2.2",
+      "cweagans/composer-patches": "~1.0",
+      "drupal/core": "~8.0",
+      "drush/drush": "~8.0",
+      "drupal/console": "~1.0",
+      "kenwheeler/slick": "~1.6.0",
+      "monolog/monolog": "~1.0",
+      "drupal/layout_plugin": "~1.0",
+      "drupal/ds": "~2.0",
+      "drupal/lightning": "~2.0",
+      "drupal/paragraphs": "~1.0",
+      "drupal/media_entity": "~1.0",
+      "drupal/media_entity_image": "~1.0",
+      "drupal/video_embed_field": "~1.0",
+      "drupal/media_entity_video": "~1.0",
+      "drupal/media_entity_document": "~1.0",
+      "drupal/page_manager": "~1.0",
+      "drupal/panels": "~1.0",
+      "drupal/entity_browser": "~1.0",
+      "drupal/inline_entity_form": "~1.0",
+      "drupal/monolog": "~1.0",
+      "drupal/blazy": "~1.0",
+      "drupal/zurb_foundation": "~6.0",
+      "drupal/slick": "~1.0"
+  },
+  "require-dev": {
+    "behat/mink": "~1.7",
+    "behat/mink-goutte-driver": "~1.2",
+    "jcalderonzumba/gastonjs": "~1.0.2",
+    "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
+    "mikey179/vfsStream": "~1.2",
+    "phpunit/phpunit": "~4.8",
+    "symfony/css-selector": "~2.8"
+  },
+  "conflict": {
+    "drupal/drupal": "*"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "autoload": {
+    "classmap": [
+      "scripts/composer/ScriptHandler.php"
+    ]
+  },
+  "scripts": {
+    "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+    "pre-install-cmd": [
+      "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
+    ],
+    "pre-update-cmd": [
+      "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
+    ],
+    "post-install-cmd": [
+      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
+    ],
+    "post-update-cmd": [
+      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
+    ]
+  },
+  "extra": {
+    "installer-paths": {
+      "src/core": ["type:drupal-core"],
+      "src/libraries/{$name}": ["type:drupal-library"],
+      "src/modules/contrib/{$name}": ["type:drupal-module"],
+      "src/profiles/contrib/{$name}": ["type:drupal-profile"],
+      "src/themes/contrib/{$name}": ["type:drupal-theme"],
+      "drush/contrib/{$name}": ["type:drupal-drush"]
+    }
+  }
 }
