--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,11 @@
     "type": "composer",
     "url": "https://packages.drupal.org/8"
   }, {
-    "type": "drupal-library",
+    "type": "package",
     "package": {
       "name": "kenwheeler/slick",
       "version": "1.6.0",
+      "type": "drupal-library",
       "dist": {
         "type": "zip",
         "url": "https://github.com/kenwheeler/slick/archive/1.6.0.zip",
@@ -28,6 +29,7 @@
       "composer/installers": "^1.2",
       "drupal-composer/drupal-scaffold": "^2.2",
       "cweagans/composer-patches": "~1.0",
+      "wikimedia/composer-merge-plugin": "^1.3.0",
       "drupal/core": "~8.0",
       "drush/drush": "~8.0",
       "drupal/console": "~1.0",
@@ -43,7 +45,7 @@
       "drupal/media_entity_video": "~1.0",
       "drupal/media_entity_document": "~1.0",
       "drupal/page_manager": "~1.0",
-      "drupal/panels": "~1.0",
+      "drupal/panels": "~3.0",
       "drupal/entity_browser": "~1.0",
       "drupal/inline_entity_form": "~1.0",
       "drupal/monolog": "~1.0",
@@ -63,11 +65,22 @@
   "conflict": {
     "drupal/drupal": "*"
   },
+  "extra": {
+    "merge-plugin": {
+      "include": [
+        "core/composer.json"
+      ],
+      "recurse": false,
+      "replace": false,
+      "merge-extra": false
+    }
+  },
+
   "minimum-stability": "dev",
   "prefer-stable": true,
   "autoload": {
     "classmap": [
-      "scripts/composer/ScriptHandler.php"
+      "composer/ScriptHandler.php"
     ]
   },
   "scripts": {
