--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,14 @@
 build_composer_project: false
 build_composer: true
 drupal_composer_path: false
-drupal_composer_install_dir: "."
+drupal_composer_install_dir: "/var/www/drupalvm"
 drupal_core_path: "{{ drupal_composer_install_dir }}/src"
+vagrant_hostname: composer.dev
+installed_extras:
+  - adminer
+  - blackfire
+  - nodejs
+  - drush
+  - drupalconsole
+  - redis
+  - pimpmylog
