--- a/config/config.yml
+++ b/config/config.yml
@@ -4,6 +4,7 @@ drupal_composer_path: false
 drupal_composer_install_dir: "/var/www/drupalvm"
 drupal_core_path: "{{ drupal_composer_install_dir }}/src"
 vagrant_hostname: composer.dev
+vagrant_ip: 0.0.0.0
 installed_extras:
   - adminer
   - blackfire
