--- a/composer.json
+++ b/composer.json
@@ -158,7 +158,9 @@
       "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
     ],
     "post-create-project-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::setupVm"
+      "DrupalProject\\composer\\ScriptHandler::setupVm",
+      "vagrant plugin install vagrant-hostsupdate",
+      "vagrant plugin install vagrant-auto_network"
     ],
     "post-install-cmd": [
       "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
