--- a/composer.json
+++ b/composer.json
@@ -156,18 +156,18 @@
       "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
     ],
     "post-create-project-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::setupVmCreateProject",
+      "DrupalProject\\composer\\ScriptHandler::setupVm",
       "vagrant plugin install vagrant-hostsupdater",
       "vagrant plugin install vagrant-auto_network"
     ],
     "post-install-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::setupVmInstall",
+      "DrupalProject\\composer\\ScriptHandler::setupVm",
       "vagrant plugin install vagrant-hostsupdater",
       "vagrant plugin install vagrant-auto_network",
       "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
     ],
     "post-update-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::setupVmInstall",
+      "DrupalProject\\composer\\ScriptHandler::setupVm",
       "vagrant plugin install vagrant-hostsupdater",
       "vagrant plugin install vagrant-auto_network",
       "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
