Move scripts folder

--- a/composer.json
+++ b/composer.json
@@ -151,7 +151,7 @@
   "prefer-stable": true,
   "autoload": {
     "classmap": [
-      "composer/ScriptHandler.php"
+      "scripts/composer/ScriptHandler.php"
     ]
   },
   "scripts": {
